fix(console): code editor content should be editable on firefox

--- a/packages/console/src/components/CodeEditor/index.module.scss
+++ b/packages/console/src/components/CodeEditor/index.module.scss
@@ -30,6 +30,8 @@
     position: relative;
 
     textarea {
+      width: 100%;
+      height: 100%;
       margin: 0;
       padding: 0;
       border: none;
